# neural-mapping

./: .gitignore  Makefile  README.md  ROADMAP.md  modal_app.py  pyproject.toml
configs/: active_metric_pairs.json  datasets.yaml  experiments.yaml  project_defaults.yaml  stress_tests.yaml  uncertainty_methods.yaml
docs/: blog-brain-dump.md  cluster-slurm.md  dashboard.html  experiment-protocol.md  gpu-baseline-bringup.md  implementation-plan.md  literature-map.md  modal.md  results.md
examples/: frames.txt  metric_input.json
scripts/: compute_uncertainty_metrics.py  evaluate_depth_metrics.py  evaluate_ensemble_uncertainty_maps.py  evaluate_frame_uncertainty.py  evaluate_render_uncertainty_maps.py  filter_nerfstudio_transforms.py  generate_active_split.py  generate_splits.py  materialize_candidate_eval.py  materialize_nerfstudio_split.py  prepare_tum_rgbd.py  score_candidate_frames.py  summarize_active_metrics.py
scripts/slurm/: 00_gpu_sanity.slurm  01_nerfstudio_setup_check.slurm  02_splatfacto_first_run.slurm  03_metric_smoke.slurm  04_download_nerfstudio_sample.slurm  05_prepare_nerfstudio_dataset.slurm  06_eval_latest_run.slurm  07_materialize_split.slurm
src/uncertainty_3dgs/: __init__.py  metrics.py  splits.py
tests/: test_active_metric_summary.py  test_ensemble_uncertainty_maps.py  test_evaluate_depth_metrics.py  test_metrics.py  test_prepare_tum_rgbd.py  test_render_uncertainty_depth_targets.py  test_splits.py
