[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uncertainty-3dgs-neural-mapping"
version = "0.1.0"
description = "Evaluation tools for calibrated uncertainty in 3D Gaussian neural maps."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
numeric = [
  "numpy>=1.24",
]
modal = [
  "modal>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
